#extra header added

--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@ and open the template in the editor.
     </head>
     <body>
         <div>new Content</div>
-    </body>
+        <h1>This is a test demo</h1></body>
 </html>
