--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@ and open the template in the editor.
     <body>
         <div>new Content</div>
         <h1>This is a test demo</h1></body>
+        <h2>header</h2>
 </html>
