--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@ and open the template in the editor.
         <h1>This is a test demo</h1></body>
         <h2>header</h2>
         <h4>hello</h4>
+        <h3>world</h3>
 </html>
