--- a/index.html
+++ b/index.html
@@ -16,4 +16,5 @@ and open the template in the editor.
         <h2>header</h2>
         <h4>hello</h4>
         <h3>world</h3>
+        <h4>test</h4>
 </html>
