--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@ and open the template in the editor.
         <h4>hello</h4>
         <h3>world</h3>
         <h4>test</h4>
+        <p>test</p>
 </html>
