#added extra paragraph

--- a/index.html
+++ b/index.html
@@ -20,4 +20,5 @@ and open the template in the editor.
         <p>test</p>
         <h3>change</h3>
         <h3>test demo</h3>
+        <p>hello</p>
 </html>
