--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--
 To change this license header, choose License Headers in Project Properties.
@@ -6,19 +7,70 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Welcome</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            #main{
+                background-color:#ff0000;
+                text-align: center;
+            }
+            #main1{
+                background-color:#F0EBC8;
+            }
+            #na{
+                width: 600px;
+                margin: 10px auto;
+            }
+            textarea { resize:vertical;}            
+        </style>
     </head>
+    
     <body>
-        <div>new Content</div>
-        <h1>This is a test demo</h1></body>
-        <h2>header</h2>
-        <h4>hello</h4>
-        <h3>world</h3>
-        <h4>test</h4>
-        <p>test</p>
-        <h3>change</h3>
-        <h3>test demo</h3>
-        <p>hello</p>
+        <div id="main">
+            <h1 style="border: #000"> Welcome to my html site</h1>
+        </div>
+        <div id="na">
+            <form action="abc.php" >
+                <div id="main1">
+                    <fieldset>
+                        <legend>Login:</legend>
+                        <label for="name">Name </label>
+                        <input type="text" id="name"/>
+                        <br>
+                        <br>
+                        <label for="email">Email</label>
+                        <input type="text" id="email"/>
+                        <br>
+                        <br>
+                        <label>Gender </label>
+                        <input type="radio" name="sex" value="male" checked>Male
+                        <input type="radio" name="sex" value="female">Female
+                        <br>
+                        <br>
+                        <label>Select City</label>
+                        <select>
+                            <option value="hubli">Hubli</option>
+                            <option value="dharwad">Dharwad</option>
+                            <option value="pune">Pune</option>
+                        </select>
+                        <br>
+                        <br>
+                        <label>My choices</label> <br>
+                        <input type="checkbox" name="pizza"value="Pizza">Pizza<br>
+                        <input type="checkbox" name="burger" value="Burger">Burger<br>
+                        <input type="checkbox" name="cake" value="Cake">Cake
+                        <br>
+                        <br>
+                        <label>Address</label><br>
+                        <textarea   rows="4" cols="50">Enter your address</textarea>
+                        <br><br>
+                        <input type="submit" value="submit"/>
+                        <input type="reset" value="Reset"/>
+                        <br>
+                    </fieldset>
+                </div>
+            </form>
+        </div>
+    </body>
 </html>
